Add ability to edit spline